changed font style in h1 and body

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+    <h1> Lolas' Dog Grooming </h1>
+    <p> At Lola's dog grooming, we treat every dogo as part of our family.
+        You have entrusted us with your beloved family member and rest assure they
+        will be treated as such. Let us know your pets little quirks so we
+        can have a wonderful grooming experience.
+    </p>
+    <nav class="menu">
+        <ul>
+          <li><a href="about.html">link1</a></li>
+          <li><a href="contact.html">link2</a></li>
+          <li><a href="about.html">link3</a></li>
+          <li><a href="contact.html">link4</a></li>
+        
+        
+        </ul>
+    </nav>
 
+
+</body>
+</html>
